--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon index.js"
+    "build": "rimraf dist && npx tsc",
+    "start": "nodemon dist/index.js",
+    "dev": "concurrently \"npx tsc -w\" \"nodemon dist/index.js\""
+
   },
   "keywords": [],
   "author": "",
@@ -13,16 +16,14 @@
   "dependencies": {
     "@apollo/server": "^4.9.5",
     "@prisma/client": "^5.7.1",
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "graphql": "^16.8.1",
-    "jsonwebtoken": "^9.0.2",
-    "validator": "^13.11.0"
+    "graphql": "^16.8.1"
   },
   "devDependencies": {
+    "concurrently": "^8.2.2",
     "nodemon": "^3.0.2",
-    "prisma": "^5.7.1"
+    "prisma": "^5.7.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
